Fixed index.css to adapt to light mode. Now functional in both light and dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,83 @@
 @import "tailwindcss";
 
+/* base styles */
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    color-scheme: light dark;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+/* links in footer */
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 
+/* outlines all of the page */
 body {
     margin: 10px;
-    display: block;
     width: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* adds the style in between the base (default tailwind) and utilities (inline tailwind) */
+/* style for all buttons on the app */
+@layer components {
+    .button {
+        @apply px-4 py-2 rounded-lg border-2 border-transparent;
+        @apply text-white cursor-pointer;
+        @apply hover:text-cyan-400 hover:border-purple-700;
+    }
+
+    .btn:focus,
+    .btn:focus-visible {
+        outline: 4px auto -webkit-focus-ring-color;
+    }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
+/* if user has light mode */
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    :root {
+        color: black;   /* text color */
+        background-color: floralwhite;
+    }
+    tr:hover {
+        background-color: lightgray;
+    }
+    button {
+        background-color: dimgray;
+    }
+
+    @layer components {
+        .dropdown-content {
+            @apply px-6 py-4 border-l border-r border-b rounded border-black
+        }
+    }
+}
+
+/* if user has dark mode */
+@media (prefers-color-scheme: dark) {
+    :root {
+        color: white;
+        background-color: #242424;
+    }
+    tr:hover {
+        background-color: gray;
+    }
+    button {
+        background-color: #1a1a1a;
+    }
+
+    @layer components {
+        .dropdown-content {
+            @apply px-6 py-4 border-l border-r border-b rounded border-white
+        }
+    }
 }
